[package]
name = "undepend"
version = "0.1.0"
edition = "2018"
description = "Trys to remove dependencies from your git checkout. Needs to work on a clean checkout."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "0.14"
toml_edit = "0.2"
