[package]
name = "undepend"
version = "0.1.1"
edition = "2018"
description = "Trys to remove dependencies from your git checkout. Needs to work on a clean checkout."
homepage = "https://github.com/gilescope/undepend"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gilescope/undepend/"
keywords = ["dependency", "deps", "udep"]
categories = ["development-tools", "development-tools::cargo-plugins"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "0.14"
toml_edit = "0.2"

[dev-dependencies]
spin = "0.5.2"

# Example of how to mark a dependency to be ignored from analysis:
[package.metadata.cargo-udeps.ignore]
normal = []
dev = ["aargh"]
build = []
